[gd_scene load_steps=32 format=3 uid="uid://cpcvdsu7dk16g"]

[ext_resource type="Texture2D" uid="uid://dbf1qp467ypmv" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 01.png" id="1_do66i"]
[ext_resource type="Script" uid="uid://yy2fdlnuio5m" path="res://scripts/enemy_2.gd" id="1_wahi8"]
[ext_resource type="Texture2D" uid="uid://bbxf4233dvcg2" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 02.png" id="2_gobvt"]
[ext_resource type="Texture2D" uid="uid://kemmms14qn17" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/15-Attack 1/Attack 1 03.png" id="3_bk233"]
[ext_resource type="Texture2D" uid="uid://dhng24ci3en7v" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 01.png" id="9_im1ml"]
[ext_resource type="Texture2D" uid="uid://ctc0i6o5acbde" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose without Sword/07-Dead Hit/Dead Hit 01.png" id="9_wahi8"]
[ext_resource type="Texture2D" uid="uid://qxsy1gklcb7w" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 02.png" id="10_0jc8h"]
[ext_resource type="Texture2D" uid="uid://hri4ufipo03u" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose without Sword/07-Dead Hit/Dead Hit 02.png" id="10_1id12"]
[ext_resource type="Texture2D" uid="uid://ulbvr4khcp8p" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose without Sword/07-Dead Hit/Dead Hit 03.png" id="11_3hrfa"]
[ext_resource type="Texture2D" uid="uid://51xk6y8a8ytm" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 03.png" id="11_cq5bx"]
[ext_resource type="Texture2D" uid="uid://1wq1x1pxt2bg" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose without Sword/07-Dead Hit/Dead Hit 04.png" id="12_im1ml"]
[ext_resource type="Texture2D" uid="uid://jiasejkel5y1" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 04.png" id="12_lpfth"]
[ext_resource type="Texture2D" uid="uid://cd36j1ijm3r4d" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 05.png" id="13_s1no8"]
[ext_resource type="Texture2D" uid="uid://epx7hpk7onwa" path="res://sprites/enemies/bear/Captain Clown Nose/Captain Clown Nose with Sword/10-Run Sword/Run Sword 06.png" id="14_4845x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xja88"]
radius = 8.0
height = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nijoy"]
atlas = ExtResource("9_im1ml")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nno7w"]
atlas = ExtResource("10_0jc8h")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gax3"]
atlas = ExtResource("11_cq5bx")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_who1x"]
atlas = ExtResource("12_lpfth")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ep2"]
atlas = ExtResource("13_s1no8")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vxt4"]
atlas = ExtResource("14_4845x")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_13v8y"]
atlas = ExtResource("1_do66i")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_u24xi"]
atlas = ExtResource("2_gobvt")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_odj5m"]
atlas = ExtResource("3_bk233")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq5bx"]
atlas = ExtResource("9_wahi8")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpfth"]
atlas = ExtResource("10_1id12")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1no8"]
atlas = ExtResource("11_3hrfa")
region = Rect2(0, 0, 64, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4845x"]
atlas = ExtResource("12_im1ml")
region = Rect2(0, 0, 64, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_gbtex"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nijoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nno7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gax3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_who1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0ep2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vxt4")
}],
"loop": true,
"name": &"andando",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13v8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u24xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odj5m")
}],
"loop": false,
"name": &"atacando",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq5bx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpfth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1no8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4845x")
}],
"loop": false,
"name": &"morto",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1id12"]
radius = 1.99292
height = 12.1256

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_do66i"]
radius = 7.0
height = 20.0

[node name="enemy2" type="CharacterBody2D"]
script = ExtResource("1_wahi8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_xja88")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_gbtex")
animation = &"andando"

[node name="terrain" type="RayCast2D" parent="."]
position = Vector2(6, -1)
target_position = Vector2(15, 0)

[node name="PlayerDetect" type="RayCast2D" parent="."]
position = Vector2(2, 5)
target_position = Vector2(16, 0)

[node name="FallDetect" type="RayCast2D" parent="."]
position = Vector2(12, -16)
target_position = Vector2(0, 28)

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" groups=["DeathZone"]]
position = Vector2(15, 5)
rotation = 1.48663
shape = SubResource("CapsuleShape2D_1id12")
debug_color = Color(0.502394, 0.454879, 0.929963, 0.42)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_do66i")
debug_color = Color(0.622245, 0.454609, 0.735654, 0.42)

[connection signal="animation_finished" from="CollisionShape2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
